--- a/tests/test_tree_flow.ipynb
+++ b/tests/test_tree_flow.ipynb
@@ -2,18 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/u02/thanhhm/research-idea\n"
+     ]
+    }
+   ],
    "source": [
     "%cd ../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
@@ -24,13 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute(x):\n",
     "    time.sleep(2)\n",
-    "    return ['a', 'b']\n",
+    "    return str(x)\n",
     "\n",
     "def compute2(x):\n",
     "    time.sleep(2)\n",
@@ -47,9 +64,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "*-[ThreadQueue(name=None, runner=1)]\n",
+       "\n",
+       "  |-(distributor:IteratorDistributor)\n",
+       "\n",
+       "    |-[ProcessQueue(name=None, runner=5)]\n",
+       "\n",
+       "      |-(compute:<function compute at 0x7fd8ac5d36a0>)\n",
+       "\n",
+       "        |-[ProcessQueue(name=None, runner=5)]\n",
+       "\n",
+       "          |-(compute2:<function compute2 at 0x7fd8ac5d3740>)\n",
+       "\n",
+       "            |-[TransferQueue(name=None, runner=1)]\n",
+       "\n",
+       "              |-(printer2:print(step 2,*,**))\n",
+       "\n",
+       "        |-[TransferQueue(name=None, runner=1)]\n",
+       "\n",
+       "          |-(printer1:print(step 1,*,**))\n",
+       "\n",
+       "        |-[ProcessQueue(name=None, runner=1)]\n",
+       "\n",
+       "          |-(compute3:ComputeClass)\n",
+       "\n",
+       "            |-[TransferQueue((name=None, runner=1)]-*\n",
+       "\n",
+       "            |-[ProcessQueue(name=None, runner=5)]\n",
+       "\n",
+       "              |-(compute2:<function compute2 at 0x7fd8ac5d3740>)..."
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "out_queue= queues.TransferQueue()\n",
     "\n",
@@ -58,6 +114,7 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "\n",
+    "        self.distributor = communicators.distributors.IteratorDistributor()\n",
     "        self.compute = compute\n",
     "        self.compute2 = compute2\n",
     "        self.compute3 = ComputeClass(1, 2)\n",
@@ -65,7 +122,8 @@
     "        self.printer2 = partials(print, 'step 2')\n",
     "\n",
     "        self.chain(\n",
-    "            (None, 'compute', queues.ProcessQueue(5), communicators.distributors.IteratorDistributor()),\n",
+    "            (None, 'distributor', queues.ThreadQueue()),\n",
+    "            ('distributor', 'compute', queues.ProcessQueue(5)),\n",
     "            ('compute', 'compute2', queues.ProcessQueue(5)),\n",
     "            ('compute', 'printer1', queues.TransferQueue()),\n",
     "            ('compute2', 'printer2', queues.TransferQueue()),\n",
@@ -80,14 +138,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 1 0\n",
+      "step 1 1\n",
+      "step 1 0\n",
+      "step 1 1\n",
+      "step 1 2\n",
+      "step 1 2\n",
+      "step 1 3\n",
+      "step 2 0c\n",
+      "step 1 3\n",
+      "step 1 4\n",
+      "step 1 4\n",
+      "step 2 1c\n",
+      "step 2 0c\n",
+      "step 2 1c\n",
+      "step 2 2c\n",
+      "step 1step 2 0dc\n",
+      " 5\n",
+      "step 1 5\n",
+      "step 2 1dc\n",
+      "step 1 6\n",
+      "step 1 6\n",
+      "step 1 7\n",
+      "step 2 0dc\n",
+      "step 2 1dc\n",
+      "step 2 2dc\n",
+      "step 1step 2 2c\n",
+      " 7\n",
+      "step 1 8\n",
+      "step 2 2dc\n",
+      "step 1 8\n",
+      "step 1 9\n",
+      "step 2 3c\n",
+      "step 1 9\n",
+      "step 2 3dc\n",
+      "step 2 3dc\n",
+      "step 2 3c\n",
+      "step 2 4c\n",
+      "step 2 4dc\n",
+      "step 2 4c\n",
+      "step 2 4dc\n",
+      "step 2 5c\n",
+      "step 2 5c\n",
+      "step 2 6c\n",
+      "step 2 5dc\n",
+      "step 2 5dc\n",
+      "step 2 6dc\n",
+      "step 2 6c\n",
+      "step 2 6dc\n",
+      "step 2 7c\n",
+      "step 2 7dc\n",
+      "step 2 8c\n",
+      "step 2 7c\n",
+      "step 2 7dc\n",
+      "step 2 8dc\n",
+      "step 2 8c\n",
+      "step 2 9c\n",
+      "step 2 8dc\n",
+      "step 2 9dc\n",
+      "step 2 9c\n",
+      "step 2 9dc\n"
+     ]
+    }
+   ],
    "source": [
     "with flow:\n",
     "   for q in flow.inputs.values():\n",
     "      for i in range(10):\n",
-    "         q.put(i)"
+    "         q.put([i] * 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "*-[ThreadQueue(name=Identity, runner=1)]\n",
+       "\n",
+       "  |-(distributor:IteratorDistributor)\n",
+       "\n",
+       "    |-[ProcessQueue(name=compute, runner=5)]\n",
+       "\n",
+       "      |-(compute:<function compute at 0x7fd8ac5d36a0>)\n",
+       "\n",
+       "        |-[ProcessQueue(name=compute2, runner=5)]\n",
+       "\n",
+       "          |-(compute2:<function compute2 at 0x7fd8ac5d3740>)\n",
+       "\n",
+       "            |-[TransferQueue(name=partials, runner=1)]\n",
+       "\n",
+       "              |-(printer2:print(step 2,*,**))\n",
+       "\n",
+       "        |-[TransferQueue(name=partials, runner=1)]\n",
+       "\n",
+       "          |-(printer1:print(step 1,*,**))\n",
+       "\n",
+       "        |-[ProcessQueue(name=ComputeClass, runner=1)]\n",
+       "\n",
+       "          |-(compute3:ComputeClass)\n",
+       "\n",
+       "            |-[TransferQueue((name=None, runner=1)]-*\n",
+       "\n",
+       "            |-[ProcessQueue(name=compute2, runner=5)]\n",
+       "\n",
+       "              |-(compute2:<function compute2 at 0x7fd8ac5d3740>)..."
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flow"
    ]
   },
   {
