--- a/tests/test_dependency_injection.ipynb
+++ b/tests/test_dependency_injection.ipynb
@@ -113,8 +113,8 @@
    "source": [
     "class Injector(meta.DependencyInjector):\n",
     "\n",
-    "    def __init__(self, strict=False):\n",
-    "        super().__init__(strict)\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
     "\n",
     "        self.huhu = HUHU\n",
     "        self.hehe = self.hihi = HEHE\n",
@@ -132,9 +132,12 @@
     {
      "data": {
       "text/plain": [
-       "{'name': plasma.meta.dependency_injector._NotInitialized,\n",
-       " 'age': plasma.meta.dependency_injector._NotInitialized,\n",
-       " 'test': 5}"
+       "{'haha': HAHA(\n",
+       "   hehe=HEHE(\n",
+       "     huhu=8,\n",
+       "   ),\n",
+       "   huhu=8,\n",
+       " )}"
       ]
      },
      "execution_count": 7,
@@ -143,7 +146,8 @@
     }
    ],
    "source": [
-    "injector.injection_points"
+    "objs = Injector().run('haha', huhu=8)\n",
+    "objs"
    ]
   },
   {
@@ -154,12 +158,14 @@
     {
      "data": {
       "text/plain": [
-       "{'haha': HAHA(\n",
-       "   hehe=HEHE(\n",
-       "     huhu=8,\n",
-       "   ),\n",
-       "   huhu=8,\n",
-       " )}"
+       "hihi\n",
+       "   |--huhu\n",
+       "----------------------------------------------------------------------------------------------------\n",
+       "haha\n",
+       "   |--hehe\n",
+       "      |--huhu\n",
+       "   |--huhu\n",
+       "----------------------------------------------------------------------------------------------------"
       ]
      },
      "execution_count": 8,
@@ -168,8 +174,7 @@
     }
    ],
    "source": [
-    "objs = Injector().run('haha', huhu=8)\n",
-    "objs"
+    "injector.add_dependency('huhu', F.Identity)"
    ]
   },
   {
