--- a/tests/test_tree_flow.ipynb
+++ b/tests/test_tree_flow.ipynb
@@ -72,33 +72,33 @@
       "text/plain": [
        "*-[ThreadQueue(name=None, runner=1)]\n",
        "\n",
-       "  |-(distributor:IteratorDistributor)\n",
+       "   |--(distributor:IteratorDistributor)\n",
        "\n",
-       "    |-[ProcessQueue(name=None, runner=5)]\n",
+       "      |--[ProcessQueue(name=None, runner=5)]\n",
        "\n",
-       "      |-(compute:<function compute at 0x7fd8ac5d36a0>)\n",
+       "         |--(compute:<function compute at 0x7f8912c69440>)\n",
        "\n",
-       "        |-[ProcessQueue(name=None, runner=5)]\n",
+       "            |--[ProcessQueue(name=None, runner=5)]\n",
        "\n",
-       "          |-(compute2:<function compute2 at 0x7fd8ac5d3740>)\n",
+       "               |--(compute2:<function compute2 at 0x7f8912abf600>)\n",
        "\n",
-       "            |-[TransferQueue(name=None, runner=1)]\n",
+       "                  |--[TransferQueue(name=None, runner=1)]\n",
        "\n",
-       "              |-(printer2:print(step 2,*,**))\n",
+       "                     |--(printer2:print(step 2,*,**))\n",
        "\n",
-       "        |-[TransferQueue(name=None, runner=1)]\n",
+       "            |--[TransferQueue(name=None, runner=1)]\n",
        "\n",
-       "          |-(printer1:print(step 1,*,**))\n",
+       "               |--(printer1:print(step 1,*,**))\n",
        "\n",
-       "        |-[ProcessQueue(name=None, runner=1)]\n",
+       "            |--[ProcessQueue(name=None, runner=1)]\n",
        "\n",
-       "          |-(compute3:ComputeClass)\n",
+       "               |--(compute3:ComputeClass)\n",
        "\n",
-       "            |-[TransferQueue((name=None, runner=1)]-*\n",
+       "                  |--[TransferQueue((name=None, runner=1)]-*\n",
        "\n",
-       "            |-[ProcessQueue(name=None, runner=5)]\n",
+       "                  |--[ProcessQueue(name=None, runner=5)]\n",
        "\n",
-       "              |-(compute2:<function compute2 at 0x7fd8ac5d3740>)..."
+       "                     |--(compute2:<function compute2 at 0x7f8912abf600>)..."
       ]
      },
      "execution_count": 4,
@@ -138,76 +138,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "step 1 0\n",
-      "step 1 1\n",
-      "step 1 0\n",
-      "step 1 1\n",
-      "step 1 2\n",
-      "step 1 2\n",
-      "step 1 3\n",
-      "step 2 0c\n",
-      "step 1 3\n",
-      "step 1 4\n",
-      "step 1 4\n",
-      "step 2 1c\n",
-      "step 2 0c\n",
-      "step 2 1c\n",
-      "step 2 2c\n",
-      "step 1step 2 0dc\n",
-      " 5\n",
-      "step 1 5\n",
-      "step 2 1dc\n",
-      "step 1 6\n",
-      "step 1 6\n",
-      "step 1 7\n",
-      "step 2 0dc\n",
-      "step 2 1dc\n",
-      "step 2 2dc\n",
-      "step 1step 2 2c\n",
-      " 7\n",
-      "step 1 8\n",
-      "step 2 2dc\n",
-      "step 1 8\n",
-      "step 1 9\n",
-      "step 2 3c\n",
-      "step 1 9\n",
-      "step 2 3dc\n",
-      "step 2 3dc\n",
-      "step 2 3c\n",
-      "step 2 4c\n",
-      "step 2 4dc\n",
-      "step 2 4c\n",
-      "step 2 4dc\n",
-      "step 2 5c\n",
-      "step 2 5c\n",
-      "step 2 6c\n",
-      "step 2 5dc\n",
-      "step 2 5dc\n",
-      "step 2 6dc\n",
-      "step 2 6c\n",
-      "step 2 6dc\n",
-      "step 2 7c\n",
-      "step 2 7dc\n",
-      "step 2 8c\n",
-      "step 2 7c\n",
-      "step 2 7dc\n",
-      "step 2 8dc\n",
-      "step 2 8c\n",
-      "step 2 9c\n",
-      "step 2 8dc\n",
-      "step 2 9dc\n",
-      "step 2 9c\n",
-      "step 2 9dc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with flow:\n",
     "   for q in flow.inputs.values():\n",
@@ -217,48 +150,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "*-[ThreadQueue(name=Identity, runner=1)]\n",
-       "\n",
-       "  |-(distributor:IteratorDistributor)\n",
-       "\n",
-       "    |-[ProcessQueue(name=compute, runner=5)]\n",
-       "\n",
-       "      |-(compute:<function compute at 0x7fd8ac5d36a0>)\n",
-       "\n",
-       "        |-[ProcessQueue(name=compute2, runner=5)]\n",
-       "\n",
-       "          |-(compute2:<function compute2 at 0x7fd8ac5d3740>)\n",
-       "\n",
-       "            |-[TransferQueue(name=partials, runner=1)]\n",
-       "\n",
-       "              |-(printer2:print(step 2,*,**))\n",
-       "\n",
-       "        |-[TransferQueue(name=partials, runner=1)]\n",
-       "\n",
-       "          |-(printer1:print(step 1,*,**))\n",
-       "\n",
-       "        |-[ProcessQueue(name=ComputeClass, runner=1)]\n",
-       "\n",
-       "          |-(compute3:ComputeClass)\n",
-       "\n",
-       "            |-[TransferQueue((name=None, runner=1)]-*\n",
-       "\n",
-       "            |-[ProcessQueue(name=compute2, runner=5)]\n",
-       "\n",
-       "              |-(compute2:<function compute2 at 0x7fd8ac5d3740>)..."
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "flow"
    ]
