--- a/tests/test_caller_block.ipynb
+++ b/tests/test_caller_block.ipynb
@@ -2,35 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/u02/thanhhm/research-idea\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd ../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import plasma.parallel_processing as pp\n",
     "import time"
@@ -38,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,32 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "*-[ProcessQueue(name=None, runner=2)]\n",
-       "\n",
-       "  |-(compute2:<function compute at 0x7f318c125800>)\n",
-       "\n",
-       "    |-[ProcessQueue(name=None, runner=1)]\n",
-       "\n",
-       "      |-(printer:<function print_pass at 0x7f318c173920>)\n",
-       "\n",
-       "        |-[TransferQueue(name=None, runner=1)]\n",
-       "\n",
-       "          |-(aggregator:Aggregator)\n",
-       "\n",
-       "            |-[ThreadQueue((name=None, runner=1)]-*"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "outputs = pp.queues.ThreadQueue()\n",
     "class Outer(pp.communicators.Sequential):\n",
@@ -92,45 +52,13 @@
     "\n",
     "        self.registerIOs(\n",
     "            compute2=pp.queues.ProcessQueue(2),\n",
-    "            printer=pp.queues.ProcessQueue(),\n",
-    "            aggregator=pp.queues.TransferQueue(),\n",
+    "            printer=pp.queues.TransferQueue('named'),\n",
+    "            aggregator=pp.queues.ThreadQueue(),\n",
     "            outputs=outputs\n",
     "        )\n",
     "\n",
     "caller = Outer()\n",
     "caller"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "*-[ProcessQueue(name=compute2, runner=2)]\n",
-       "\n",
-       "  |-(compute2:<function compute at 0x7f318c125800>)\n",
-       "\n",
-       "    |-[ProcessQueue(name=printer, runner=1)]\n",
-       "\n",
-       "      |-(printer:<function print_pass at 0x7f318c173920>)\n",
-       "\n",
-       "        |-[TransferQueue(name=aggregator, runner=1)]\n",
-       "\n",
-       "          |-(aggregator:Aggregator)\n",
-       "\n",
-       "            |-[ThreadQueue((name=None, runner=1)]-*"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "caller.run()"
    ]
   },
   {
@@ -144,24 +72,6 @@
     "        caller.put(i)\n",
     "    \n",
     "    print(caller.aggregator.wait())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "caller.print = print"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "caller.registerIOs(compute2=pp.queues.TransferQueue())"
    ]
   },
   {
