--- a/tests/test_tree_flow.ipynb
+++ b/tests/test_tree_flow.ipynb
@@ -2,35 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/u02/thanhhm/research-idea\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd ../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "\n",
@@ -41,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,48 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "*-[ThreadQueue(name=None, runner=1)]\n",
-       "\n",
-       "   |--(distributor:IteratorDistributor)\n",
-       "\n",
-       "      |--[ProcessQueue(name=None, runner=5)]\n",
-       "\n",
-       "         |--(compute:<function compute at 0x7f8912c69440>)\n",
-       "\n",
-       "            |--[ProcessQueue(name=None, runner=5)]\n",
-       "\n",
-       "               |--(compute2:<function compute2 at 0x7f8912abf600>)\n",
-       "\n",
-       "                  |--[TransferQueue(name=None, runner=1)]\n",
-       "\n",
-       "                     |--(printer2:print(step 2,*,**))\n",
-       "\n",
-       "            |--[TransferQueue(name=None, runner=1)]\n",
-       "\n",
-       "               |--(printer1:print(step 1,*,**))\n",
-       "\n",
-       "            |--[ProcessQueue(name=None, runner=1)]\n",
-       "\n",
-       "               |--(compute3:ComputeClass)\n",
-       "\n",
-       "                  |--[TransferQueue((name=None, runner=1)]-*\n",
-       "\n",
-       "                  |--[ProcessQueue(name=None, runner=5)]\n",
-       "\n",
-       "                     |--(compute2:<function compute2 at 0x7f8912abf600>)..."
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "out_queue= queues.TransferQueue()\n",
     "\n",
@@ -143,18 +87,8 @@
    "outputs": [],
    "source": [
     "with flow:\n",
-    "   for q in flow.inputs.values():\n",
-    "      for i in range(10):\n",
-    "         q.put([i] * 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flow"
+    "   for i in range(10):\n",
+    "      flow.put([i] * 2)"
    ]
   },
   {
