add exception handler to queue

--- a/tests/test_queue.ipynb
+++ b/tests/test_queue.ipynb
@@ -47,15 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "ThreadQueue(\n",
-       "  name='test',\n",
+       "  name=None,\n",
        "  num_runner=5,\n",
+       "  timeout=None,\n",
        ")"
       ]
      },
