--- a/tests/test_dependency_injection.ipynb
+++ b/tests/test_dependency_injection.ipynb
@@ -87,21 +87,12 @@
      "data": {
       "text/plain": [
        "hihi\n",
-       "   |--huhu\n",
-       "      |--name\n",
-       "      |--age\n",
-       "      |--test=<class 'int'>\n",
+       "   |--huhu=<class 'int'>\n",
        "----------------------------------------------------------------------------------------------------\n",
        "haha\n",
        "   |--hehe\n",
-       "      |--huhu\n",
-       "         |--name\n",
-       "         |--age\n",
-       "         |--test=<class 'int'>\n",
-       "   |--huhu\n",
-       "      |--name\n",
-       "      |--age\n",
-       "      |--test=<class 'int'>\n",
+       "      |--huhu=<class 'int'>\n",
+       "   |--huhu=<class 'int'>\n",
        "----------------------------------------------------------------------------------------------------"
       ]
      },
@@ -111,16 +102,12 @@
     }
    ],
    "source": [
-    "class Injector(meta.DependencyInjector):\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "\n",
-    "        self.huhu = HUHU\n",
-    "        self.hehe = self.hihi = HEHE\n",
-    "        self.haha = HAHA\n",
-    "\n",
-    "injector = Injector()\n",
+    "injector = meta.DependencyInjector()\n",
+    "injector\\\n",
+    "    .add_dependency('huhu', HUHU)\\\n",
+    "    .add_dependency('hehe', HEHE)\\\n",
+    "    .add_dependency('hihi', HEHE)\\\n",
+    "    .add_dependency('haha', HAHA)\n",
     "injector"
    ]
   },
@@ -132,12 +119,8 @@
     {
      "data": {
       "text/plain": [
-       "{'haha': HAHA(\n",
-       "   hehe=HEHE(\n",
-       "     huhu=8,\n",
-       "   ),\n",
-       "   huhu=8,\n",
-       " )}"
+       "haha    HAHA(\\n  hehe=HEHE(\\n    huhu=8,\\n  ),\\n  huhu...\n",
+       "dtype: object"
       ]
      },
      "execution_count": 7,
@@ -146,35 +129,8 @@
     }
    ],
    "source": [
-    "objs = Injector().run('haha', huhu=8)\n",
+    "objs = injector.run('haha', huhu=8)\n",
     "objs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "hihi\n",
-       "   |--huhu\n",
-       "----------------------------------------------------------------------------------------------------\n",
-       "haha\n",
-       "   |--hehe\n",
-       "      |--huhu\n",
-       "   |--huhu\n",
-       "----------------------------------------------------------------------------------------------------"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "injector.add_dependency('huhu', F.Identity)"
    ]
   },
   {
