fix treeflow error handling bug

--- a/tests/test_sequential.ipynb
+++ b/tests/test_sequential.ipynb
@@ -61,18 +61,11 @@
     "            outputs=outputs\n",
     "        )\n",
     "        \n",
-    "        self.on_exception(handle_ex)\n",
+    "        #self.on_exception(handle_ex)\n",
     "\n",
     "caller = Outer()\n",
     "caller"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
